<resources>
    <string name="app_name">CarDriver</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- Строковый массив для Spinner -->
    <string-array name="spinner_items">
        <item>А/T</item>
        <item>М/Т</item>
    </string-array>
	
	<string name="activity_booking_title">Давайте найдём автомобиль</string>
	<string name="activity_booking_searchhint">Введите названеи марки</string>
	
	<string name="activity_booking_cancel_title">Удаление брони</string>
	<string name="delete">Удалить</string>
	
	<string name="total">Итого</string>
	<string name="address">Адрес</string>
	<string name="fio_vod">ФИО Водителя</string>
	<string name="rent_end">Конец Аредны</string>
	<string name="rent_start">Начало Аренды</string>
	
	<string name="activity_booking_favorite_title">Избранное</string>
	
	<string name="change_password">Сменить пароль</string>
	
	<string name="current_password">Текущий пароль</string>
	<string name="current_password_hint">Введите текущий пароль</string>
	
	<string name="create_password">Новый пароль</string>
	<string name="create_password_hint">Введите новый пароль</string>
	
	<string name="repeat_new_password">Повторите новый пароль</string>
	<string name="repeat_new_password_hint">Введите новый пароль</string>
	
	<string name="description">Описание</string>
	<string name="details">Детали</string>
	<string name="address_nah">Адрес нахождения</string>
	
	<string name="to_login">Войти</string>
	<string name="to_register">Зарегестрироваться</string>
	
	<string name="AppName">CarDriver</string>
	<string name="App_brief">Поможем найти твою следующую поездку</string>
	
	<string name="email">Электронная почта</string>
	<string name="login_in">Войдите в аккаунт</string>
	<string name="ask_for_data">Пожалуйста введите свои данные</string>
	<string name="email_hint">Введите вашу почту</string>
	<string name="password">Пароль</string>
	<string name="password_hint">Введите ваш пароль</string>
	
	<string name="my_bookings_title">Мои бронирования</string>
	
	<string name="check_connection">Проверьте подключение и повторите попытку</string>
	<string name="no_connection">Нет подключения к интернету</string>
	<string name="retry">Повторить попытку</string>
	<string name="next">Далее</string>
	
	<string name="skip">Пропустить</string>
	<string name="onboarding_title_1">Аренда автомобилей</string>
	<string name="onboarding_text_1">Открой для себя удобный и доступный способ передвижения</string>
	<string name="google">Google</string>
	<string name="gender">Пол</string>
	<string name="logoff">Выйти из профиля</string>
	<string name="confidential_agree">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
	<string name="create_account">Создать аккаунт</string>
	<string name="gender_male">Мужской</string>
	<string name="gender_female">Женский</string>
	<string name="birth_date">День рождения</string>
	<string name="surname">Фамилия</string>
	<string name="surname_hint">Введите фамилию</string>
	<string name="name">Имя</string>
	<string name="name_hint">Введите имя</string>
	<string name="name3">Отчество</string>
	<string name="name3_hint">Введите отчество</string>
	<string name="go_to_booking">Перейти к своим бронированиям</string>
	<string name="go_to_main">На главную</string>
	<string name="good_ride_for_you">Удачной поездки</string>
	<string name="connect_your_car">Подключить свой автомобиль</string>
	<string name="theme">Тема</string>
	<string name="notifications">Уведомления</string>
	<string name="my_bookings">Мои бронирования</string>
	<string name="friend_invite">Пригласи други</string>
	<string name="help">Помощь</string>
	<string name="petrol">Бензин</string>
	<string name="to_rent">Забронировать</string>
	<string name="to_home">Домой</string>
	<string name="favorite">Избранное</string>
	<string name="settings">Настройки</string>
	<string name="custom"></string>
	<string name="custom"></string>
	
	
</resources>