<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoEthernet">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="284dp"
        android:layout_height="41dp"
        android:fontFamily="@font/fonts"
        android:gravity="center"
		android:text="@string/check_connection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="235dp"
        android:layout_height="62dp"
        android:fontFamily="@font/medium"
        android:gravity="center"
		android:text="@string/no_connection"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <Button
        android:id="@+id/button_reconnect"
        android:layout_width="342dp"

        android:layout_height="52dp"
        android:background="@drawable/frontofbutton"
        android:elevation="4dp"
        android:fontFamily="@font/fonts"
        android:gravity="center"
        android:paddingStart="32dp"
        android:paddingTop="14dp"
        android:paddingEnd="32dp"
        android:paddingBottom="14dp"
		android:text="@string/retry"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="498dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/noether" />
</androidx.constraintlayout.widget.ConstraintLayout>